Attempting to correct agent mode.  Also implementation of example1 application.